[package]
name = "prataut_backend"
version = "0.1.0"
authors = ["Isak Johansson <isak@k22.se>"]
edition = "2018"

[dependencies]
ws = "0.9.1"
rocket = "0.4.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
redis = "0.15.1"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.4"

lapin = "0.37.0"
env_logger = "0.7.1"
log = "0.4.0"
#futures-executor = "0.3.4"
futures = "0.3"
wampire = "0.1.2"
serde_json = "1.0"