[package]
name = "prataut_backend"
version = "0.1.0"
authors = ["Isak Johansson <isak@k22.se>"]
edition = "2018"

[dependencies]
ws = "0.9.1"
rocket = "0.4.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
redis = "0.15.1"
#redis = { git = "https://github.com/mitsuhiko/redis-rs" }
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.4"
async-std = "1.5.0"
lapin = "0.37.0"
#mioco = "0.8.1"
env_logger = "0.7.1"
log = "0.4.0"
#futures-executor = "0.3.4"
futures = "0.3"
#wampire = "0.1.2"
#redis = "0.15.1"
serde_json = "1.0"
serde = { version = '1.0.83', features = ['derive'] }